<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewModel" type="stip.stipperscheckin.viewmodels.SettingsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="36"
            android:inputType="textPassword"
            android:hint="@string/Settings_api_key"
            android:text="@={viewModel.apiKey}"/>

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textOn="@string/Settings_flash_on"
            android:textOff="@string/Settings_flash_off"
            android:checked="@={viewModel.torchOn}"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings_which_side_points_to_user"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:columnCount="3"
            android:rowCount="3">
            <Button android:text="@string/arrow_up" android:layout_column="1" android:layout_row="0" android:onClick="@{viewModel::onUp}"/>
            <Button android:text="@string/arrow_left" android:layout_column="0" android:layout_row="1" android:onClick="@{viewModel::onLeft}"/>
            <Button android:text="@string/arrow_right" android:layout_column="2" android:layout_row="1" android:onClick="@{viewModel::onRight}"/>
            <Button android:text="@string/arrow_down" android:layout_column="1" android:layout_row="2" android:onClick="@{viewModel::onDown}"/>
        </GridLayout>

    </LinearLayout>
</layout>